# pmw3325-mouse

./: .mxproject  .project  CMakeLists.txt  README.md  pmw3325-mouse.ioc  stm32f042g6ux_flash.ld
Core/Inc/: Rotary.h  main.h  sensor.h  stm32f0xx_it.h
Core/Src/: Rotary.c  main.c  sensor.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Flash/: flash.cmake  openocd.cfg
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
